--- a/views/web/Information.html
+++ b/views/web/Information.html
@@ -37,17 +37,18 @@
     />
   </head>
   <body>
-    <div class="container w-100 b-2">
+    <div class="container w-100 b-2 mt-1">
         <div class="row h-100 w-100">
             <div class="col-4 h-100 br-2">
                 <p class="font mgb-7">Trang tài khoản</p>
                 <p class="font-14 mgb-28">Xin chào, <span style="color: #12487f;" class="username"></span></p>
                 <ul class="mgb-28">
-                    <li class="mgb-28"><a href="http://127.0.0.1:5500/DoAnWeb-main/views/web/Information.html" class="font-14 text-black">Thông tin tài khoản</a></li>
+                    <li class="mgb-28"><a href="http://127.0.0.1:5500/DoAnWeb-main/views/web/Information.html" class="font-14 c-bl">Thông tin tài khoản</a></li>
+                    <li class="mgb-28"><a href="http://127.0.0.1:5500/DoAnWeb-main/views/web/address.html" class="font-14 text-black">Sổ địa chỉ</a></li>
                     <li class="logout"><a href="http://127.0.0.1:5500/DoAnWeb-main/views/web/login.html" class="font-16 text-black">Đăng xuất</a></li>
                 </ul>
             </div>
-            <div class="col-sm-8 col-12 h-100 mt-3">
+            <div class="col-sm-8 col-12 h-100 mt-1">
                 <p class="font mgb-16">Tài khoản</p>
                 <p class="font-14 mgb-16">Tên tài khoản : <span id="username"></span></p>
                 <div class="font-14 mgb-16"><i class='bx bxs-home' style="color: #12487f;"></i> Địa chỉ : Vietnam</div>
@@ -96,6 +97,6 @@
     <script src="../../lib/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
     <!-- Fontawsome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
-<script src="../../assets/JS/LoginLogout/Information.js"></script>
+    <script src="../../assets/JS/LoginLogout/Information.js"></script>
   </body>
 </html>
