--- a/views/web/login.html
+++ b/views/web/login.html
@@ -401,6 +401,7 @@
                     >Email <span>*</span></label
                   >
                   <input type="text" id="email" placeholder="Email" />
+                  <p class="email-error"></p>
                   <p class="email-title">
                     <i class="bx bxs-hand-right"></i><i> Vui lòng nhập email</i>
                   </p>
@@ -410,6 +411,7 @@
                     >Mật khẩu <span>*</span></label
                   >
                   <input type="password" id="password" placeholder="Mật khẩu" />
+                  <p class="password-error"></p>
                   <p class="password-title">
                     <i class="bx bxs-hand-right"></i
                     ><i> Vui lòng nhập mật khẩu</i>
